# soqt

./: CMakeLists.txt  README.md  resources.qrc
ports/: genericport.cpp  genericport.h
ports/file/: widgefilehandler.cpp  widgefilehandler.h  widgefilehandler.ui
ports/gate/: widgegate.cpp  widgegate.h  widgegate.ui
ports/serial/: serial_reader.cpp  serial_reader.h  widgelinuxserial.cpp  widgelinuxserial.h  widgelinuxserial.ui  widgeserial.cpp  widgeserial.h  widgeserial.ui  widgevirtualserial.cpp  widgevirtualserial.h  widgevirtualserial.ui
ports/tcp/: widgetcp.cpp  widgetcp.h  widgetcp.ui
ports/trigger/: generictrigger.cpp  generictrigger.h  widgetrigger.cpp  widgetrigger.h  widgetrigger.ui  widgetriggergoto.cpp  widgetriggergoto.h  widgetriggergoto.ui  widgetriggerlisten.cpp  widgetriggerlisten.h  widgetriggerlisten.ui  widgetriggerpause.cpp  widgetriggerpause.h  widgetriggerpause.ui  widgetriggersend.cpp  widgetriggersend.h  widgetriggersend.ui  widgetriggertag.cpp  widgetriggertag.h  widgetriggertag.ui  widgetriggerwait.cpp  widgetriggerwait.h  widgetriggerwait.ui
ports/udp/: widgeudp.cpp  widgeudp.h  widgeudp.ui
resources/: rules.txt
srcs/: arrow.cpp  arrow.h  diagramitem.h  general_functions.cpp  general_functions.h  grepper.cpp  grepper.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  myscene.cpp  myscene.h  portsettingdialog.cpp  portsettingdialog.h  portsettingdialog.ui  portview.cpp  portview.h  textdisplay.cpp  textdisplay.h
